tests/parsing/smtlib/v2.6/errors/093_get-info_bad_flag_1.expected
File "tests/parsing/smtlib/v2.6/errors/093_get-info_bad_flag_1.smt2", line 2, character 10-13:
2 | (get-info foo)
              ^^^
Error while parsing a get-info command, read the symbol 'foo',
      but expected a keyword of the form ":symbol".
